syntax = "proto3";

package goeni.binding;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "goeni/binding/params.proto";
import "goeni/binding/binding.proto";

option go_package = "github.com/eni-chain/go-eni/x/binding/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/eni-chain/go-eni/binding/params";
  
  }
  
  // Queries a list of Binding items.
  rpc Binding    (QueryGetBindingRequest) returns (QueryGetBindingResponse) {
    option (google.api.http).get = "/eni-chain/go-eni/binding/binding/{index}";
  
  }
  rpc BindingAll (QueryAllBindingRequest) returns (QueryAllBindingResponse) {
    option (google.api.http).get = "/eni-chain/go-eni/binding/binding";
  
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

message QueryGetBindingRequest {
  string index = 1;
}

message QueryGetBindingResponse {
  Binding binding = 1 [(gogoproto.nullable) = false];
}

message QueryAllBindingRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllBindingResponse {
  repeated Binding                                binding    = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

